--- a/index.html
+++ b/index.html
@@ -15,6 +15,38 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Noto+Serif:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
 
+    <!-- SEO & Social Meta Tags -->
+    <meta name="author" content="Sergio Argudo Santiago">
+    <meta name="keywords"
+        content="Oposiciones SOIVRE, Inspectores del SOIVRE, Ingenieros Técnicos SOIVRE, Temario SOIVRE, Comercio Exterior, Aduanas, Preparación Oposiciones">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sergioargudosantiago.github.io/">
+    <meta property="og:title" content="Sergio Argudo Santiago - Preparación Oposiciones Inspectores del SOIVRE">
+    <meta property="og:description"
+        content="Preparación integral para el Cuerpo de Inspectores del SOIVRE. Temario, recursos y materiales para Ingenieros Técnicos.">
+    <meta property="og:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sergioargudosantiago.github.io/">
+    <meta property="twitter:title" content="Sergio Argudo Santiago - Preparación Oposiciones Inspectores del SOIVRE">
+    <meta property="twitter:description"
+        content="Preparación integral para el Cuerpo de Inspectores del SOIVRE. Temario, recursos y materiales para Ingenieros Técnicos.">
+    <meta property="twitter:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+
+    <!-- Google Analytics (GA4) -->
+    <!-- Replace G-XXXXXXXXXX with your Deployment ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -99,6 +131,8 @@
             position: relative;
             min-height: 100vh;
             color: hsl(var(--foreground));
+            padding-bottom: 5rem;
+            /* Space for sticky footer */
         }
 
 
@@ -877,48 +911,89 @@
         <!-- Hero Section with Glass Card -->
         <section class="flex min-h-screen w-full items-center justify-center px-4 py-20">
             <div class="container mx-auto max-w-6xl px-4 md:px-6">
+                <!-- Carousel Container with Glassmorphism Card -->
                 <div
-                    class="bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl shadow-2xl p-8 md:p-12 min-h-[50vh] flex items-center justify-center">
-                    <div class="flex flex-col items-center space-y-10 text-center">
-                        <h1
-                            class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-extrabold tracking-tight leading-tight text-primary">
-                            INTRODUCCIÓN
-                        </h1>
-                        <p
-                            class="mx-auto max-w-[680px] text-center text-base md:text-lg leading-relaxed text-foreground/80">
-                            En esta web encontrarás resúmenes extendidos de temario, recursos y algunos enlaces de
-                            utilidad para la preparación de las oposiciones del <span
-                                class="font-semibold text-foreground">Cuerpo de Inspectores del SOIVRE</span> e <span
-                                class="font-semibold text-foreground">Ingenieros Técnicos del SOIVRE</span>.
-                        </p>
+                    class="relative w-full max-w-5xl mx-auto min-h-[500px] bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl shadow-2xl p-8 md:p-12 flex items-center justify-center overflow-hidden">
+                    <!-- Carousel Slides -->
+                    <div id="carouselSlides" class="relative w-full h-full flex items-center justify-center">
+                        <!-- Slide 1: Intro -->
+                        <div class="carousel-slide absolute inset-0 flex flex-col items-center justify-center text-center transition-opacity duration-700 opacity-100 z-10"
+                            id="slide-1">
+                            <h1
+                                class="text-3xl sm:text-5xl md:text-6xl lg:text-7xl font-extrabold tracking-tight leading-tight text-primary mb-4 md:mb-6">
+                                INTRODUCCIÓN
+                            </h1>
+                            <p
+                                class="mx-auto max-w-[700px] text-center text-base md:text-lg leading-relaxed text-foreground/80 mb-8">
+                                Recursos especializados para la preparación de las oposiciones al <span
+                                    class="font-bold text-primary">Cuerpo de Inspectores del SOIVRE</span>.
+                                <br class="hidden md:block">
+                                Material también de gran utilidad para <span class="font-bold text-primary">Ingenieros
+                                    Técnicos del SOIVRE</span>.
+                            </p>
 
-                        <!-- CTA Button with hardcoded SVG size -->
-                        <a href="temario.html"
-                            class="inline-flex items-center gap-2 px-8 py-4 min-h-[44px] rounded-full border-2 border-primary text-primary font-semibold text-sm sm:text-base hover:bg-primary hover:text-white active:scale-95 transition-all duration-200">
-                            Explorar Temario
-                            <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
-                                    d="M9 5l7 7-7 7" />
-                            </svg>
-                        </a>
+                            <!-- CTA Button -->
+                            <a href="temario.html"
+                                class="inline-flex items-center gap-2 px-6 py-3 md:px-8 md:py-4 rounded-full bg-primary text-white font-semibold text-sm sm:text-base shadow-lg hover:bg-primary/90 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
+                                Explorar Temario
+                                <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                        d="M13 7l5 5m0 0l-5 5m5-5H6" />
+                                </svg>
+                            </a>
+                        </div>
+
+                        <!-- Slide 2: Why SOIVRE? -->
+                        <div class="carousel-slide absolute inset-0 flex flex-col items-center justify-center text-center transition-opacity duration-700 opacity-0 z-0 pointer-events-none"
+                            id="slide-2">
+                            <h1
+                                class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tight leading-tight text-primary mb-4 md:mb-6">
+                                ¿POR QUÉ INSPECTOR DEL SOIVRE?
+                            </h1>
+                            <p
+                                class="mx-auto max-w-[700px] text-center text-sm sm:text-base md:text-lg leading-relaxed text-foreground/80 mb-6 md:mb-8">
+                                Una carrera estratégica en el comercio exterior, con proyección internacional y
+                                funciones
+                                clave en la protección del consumidor y el medio ambiente.
+                                <br><br>
+                                Descubre todo sobre el cuerpo, funciones y destinos en la web de la Asociación.
+                            </p>
+
+                            <!-- CTA Button (Harmonized) -->
+                            <a href="https://soivre.webflow.io/" target="_blank" rel="noopener noreferrer"
+                                class="inline-flex items-center gap-2 px-6 py-3 md:px-8 md:py-4 rounded-full bg-primary text-white font-semibold text-sm sm:text-base shadow-lg hover:bg-primary/90 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
+                                Web de la Asociación
+                                <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                        d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Slider Indicators -->
+                    <div
+                        class="absolute bottom-6 md:bottom-8 left-0 right-0 flex justify-center items-center gap-3 z-20">
+                        <button onclick="goToSlide(1)" id="indicator-1"
+                            class="w-3 h-3 rounded-full bg-primary transition-all duration-300 scale-125 ring-2 ring-primary/30"
+                            aria-label="Ir a diapositiva 1"></button>
+                        <button onclick="goToSlide(2)" id="indicator-2"
+                            class="w-3 h-3 rounded-full bg-gray-300 hover:bg-gray-400 transition-all duration-300"
+                            aria-label="Ir a diapositiva 2"></button>
                     </div>
                 </div>
 
-                <!-- Slider Indicators -->
-                <div class="flex justify-center items-center gap-2 mt-12">
-                    <button class="w-8 h-1.5 rounded-full bg-gray-300 hover:bg-gray-400 transition-colors"
-                        aria-label="Slide 1"></button>
-                    <button class="w-8 h-1.5 rounded-full bg-primary" aria-label="Slide 2"></button>
-                    <button class="w-8 h-1.5 rounded-full bg-gray-300 hover:bg-gray-400 transition-colors"
-                        aria-label="Slide 3"></button>
-                </div>
+                <!-- Spacer below carousel -->
+                <div class="h-8 md:h-12"></div>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-primary text-primary-foreground">
+    <!-- Footer (Sticky) -->
+    <footer
+        class="bg-primary text-primary-foreground fixed bottom-0 left-0 right-0 z-50 shadow-lg border-t border-primary/20 backdrop-blur-sm bg-opacity-95">
         <div class="container mx-auto flex h-16 items-center justify-center gap-6 px-4 sm:px-6 lg:px-8">
             <a href="https://www.linkedin.com/in/sergio-argudo-santiago-inspector-soivre-placeholder"
                 aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"
@@ -991,6 +1066,79 @@
                     toggleMobileMenu();
                 }
             }
+        });
+    </script>
+    <!-- Hero Carousel Logic -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const slides = [
+                document.getElementById('slide-1'),
+                document.getElementById('slide-2')
+            ];
+            const indicators = [
+                document.getElementById('indicator-1'),
+                document.getElementById('indicator-2')
+            ];
+            let currentSlide = 0;
+            let interval;
+            const INTERVAL_TIME = 8000;
+
+            function showSlide(index) {
+                // Update slides
+                slides.forEach((slide, i) => {
+                    if (i === index) {
+                        slide.classList.remove('opacity-0', 'pointer-events-none');
+                        slide.classList.add('opacity-100', 'z-10');
+                        slide.classList.remove('z-0');
+                    } else {
+                        slide.classList.remove('opacity-100', 'z-10');
+                        slide.classList.add('opacity-0', 'z-0', 'pointer-events-none');
+                    }
+                });
+
+                // Update indicators
+                indicators.forEach((indicator, i) => {
+                    if (i === index) {
+                        indicator.classList.remove('bg-gray-300', 'hover:bg-gray-400', 'scale-100');
+                        indicator.classList.add('bg-primary', 'scale-125', 'ring-2', 'ring-primary/30');
+                    } else {
+                        indicator.classList.remove('bg-primary', 'scale-125', 'ring-2', 'ring-primary/30');
+                        indicator.classList.add('bg-gray-300', 'hover:bg-gray-400', 'scale-100');
+                    }
+                });
+
+                currentSlide = index;
+            }
+
+            function nextSlide() {
+                let next = (currentSlide + 1) % slides.length;
+                showSlide(next);
+            }
+
+            function startTimer() {
+                interval = setInterval(nextSlide, INTERVAL_TIME);
+            }
+
+            function resetTimer() {
+                clearInterval(interval);
+                startTimer();
+            }
+
+            // Global function for onclick events
+            window.goToSlide = function (index) {
+                // Adjust for 0-based index if passed as 1-based
+                let actualIndex = index - 1;
+                showSlide(actualIndex);
+                resetTimer();
+            };
+
+            // Start loop
+            startTimer();
+
+            // Pause on hover
+            const carouselContainer = document.getElementById('carouselSlides');
+            carouselContainer.addEventListener('mouseenter', () => clearInterval(interval));
+            carouselContainer.addEventListener('mouseleave', startTimer);
         });
     </script>
 </body>
