--- a/index.html
+++ b/index.html
@@ -911,6 +911,20 @@
         <!-- Hero Section with Glass Card -->
         <section class="flex min-h-screen w-full items-center justify-center px-4 py-20">
             <div class="container mx-auto max-w-6xl px-4 md:px-6">
+                <!-- Segmented Control (Tabs) - Correctly Positioned Top -->
+                <div class="flex justify-center mb-6 px-4 z-30 relative">
+                    <div class="bg-white/90 backdrop-blur-md rounded-full p-1 flex shadow-lg ring-1 ring-black/5">
+                        <button onclick="goToSlide(1)" id="tab-1"
+                            class="px-6 py-2 rounded-full text-xs sm:text-sm font-bold transition-all duration-300 bg-primary text-white shadow-sm">
+                            Inicio
+                        </button>
+                        <button onclick="goToSlide(2)" id="tab-2"
+                            class="px-6 py-2 rounded-full text-xs sm:text-sm font-bold transition-all duration-300 text-gray-600 hover:bg-gray-100">
+                            ¿Por qué Inspector del SOIVRE?
+                        </button>
+                    </div>
+                </div>
+
                 <!-- Carousel Container with Glassmorphism Card -->
                 <div
                     class="relative w-full max-w-5xl mx-auto min-h-[500px] bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl shadow-2xl p-8 md:p-12 flex items-center justify-center overflow-hidden">
@@ -928,7 +942,8 @@
                                 Recursos especializados para la preparación de las oposiciones al <span
                                     class="font-bold text-primary">Cuerpo de Inspectores del SOIVRE</span>.
                                 <br class="hidden md:block">
-                                Material también de gran utilidad para <span class="font-bold text-primary">Ingenieros
+                                Material también de gran utilidad para el <span class="font-bold text-primary">Cuerpo de
+                                    Ingenieros
                                     Técnicos del SOIVRE</span>.
                             </p>
 
@@ -953,9 +968,10 @@
                             </h1>
                             <p
                                 class="mx-auto max-w-[700px] text-center text-sm sm:text-base md:text-lg leading-relaxed text-foreground/80 mb-6 md:mb-8">
-                                Una carrera estratégica en el comercio exterior, con proyección internacional y
-                                funciones
-                                clave en la protección del consumidor y el medio ambiente.
+                                Una carrera centrada en el comercio exterior con funciones clave en inspección
+                                agroalimentaria e industrial, así como en el diseño de política e inteligencia
+                                comercial, ofreciendo una sólida proyección nacional en la red territorial como
+                                internacional en las Oficinas Económicas y Comerciales en el extranjero.
                                 <br><br>
                                 Descubre todo sobre el cuerpo, funciones y destinos en la web de la Asociación.
                             </p>
@@ -973,16 +989,9 @@
                         </div>
                     </div>
 
-                    <!-- Slider Indicators -->
-                    <div
-                        class="absolute bottom-6 md:bottom-8 left-0 right-0 flex justify-center items-center gap-3 z-20">
-                        <button onclick="goToSlide(1)" id="indicator-1"
-                            class="w-3 h-3 rounded-full bg-primary transition-all duration-300 scale-125 ring-2 ring-primary/30"
-                            aria-label="Ir a diapositiva 1"></button>
-                        <button onclick="goToSlide(2)" id="indicator-2"
-                            class="w-3 h-3 rounded-full bg-gray-300 hover:bg-gray-400 transition-all duration-300"
-                            aria-label="Ir a diapositiva 2"></button>
-                    </div>
+                    <!-- Slider Controls (Arrows) -->
+                    <!-- Slider Controls (Arrows) -->
+                    <!-- Segmented Control (Tabs) -->
                 </div>
 
                 <!-- Spacer below carousel -->
@@ -1096,14 +1105,16 @@
                     }
                 });
 
-                // Update indicators
-                indicators.forEach((indicator, i) => {
-                    if (i === index) {
-                        indicator.classList.remove('bg-gray-300', 'hover:bg-gray-400', 'scale-100');
-                        indicator.classList.add('bg-primary', 'scale-125', 'ring-2', 'ring-primary/30');
-                    } else {
-                        indicator.classList.remove('bg-primary', 'scale-125', 'ring-2', 'ring-primary/30');
-                        indicator.classList.add('bg-gray-300', 'hover:bg-gray-400', 'scale-100');
+                // Update Tabs (Segmented Control)
+                const tabs = [document.getElementById('tab-1'), document.getElementById('tab-2')];
+
+                tabs.forEach((tab, i) => {
+                    if (tab) { // Check if exists to avoid errors
+                        if (i === index) {
+                            tab.className = "px-6 py-2 rounded-full text-xs sm:text-sm font-bold transition-all duration-300 bg-primary text-white shadow-sm scale-105";
+                        } else {
+                            tab.className = "px-6 py-2 rounded-full text-xs sm:text-sm font-bold transition-all duration-300 text-gray-600 hover:bg-gray-100";
+                        }
                     }
                 });
 
@@ -1116,12 +1127,12 @@
             }
 
             function startTimer() {
-                interval = setInterval(nextSlide, INTERVAL_TIME);
+                // interval = setInterval(nextSlide, INTERVAL_TIME);
             }
 
             function resetTimer() {
-                clearInterval(interval);
-                startTimer();
+                // clearInterval(interval);
+                // startTimer();
             }
 
             // Global function for onclick events
@@ -1132,13 +1143,49 @@
                 resetTimer();
             };
 
-            // Start loop
-            startTimer();
+            // Global function for arrow navigation
+            // Global function for arrow navigation (Removed, using Swipe/Tabs now)
+
+            // Touch Handling Variables
+            let touchStartX = 0;
+            let touchEndX = 0;
+            const carouselContainer = document.getElementById('carouselSlides'); // Use the container ID directly
+
+            if (carouselContainer) {
+                carouselContainer.addEventListener('touchstart', e => {
+                    touchStartX = e.changedTouches[0].screenX;
+                }, { passive: true });
+
+                carouselContainer.addEventListener('touchend', e => {
+                    touchEndX = e.changedTouches[0].screenX;
+                    handleSwipe();
+                }, { passive: true });
+            }
+
+            function handleSwipe() {
+                const SWIPE_THRESHOLD = 50;
+                if (touchEndX < touchStartX - SWIPE_THRESHOLD) {
+                    // Swipe Left (Next)
+                    nextSlide();
+                    resetTimer();
+                }
+                if (touchEndX > touchStartX + SWIPE_THRESHOLD) {
+                    // Swipe Right (Prev)
+                    // Logic to go back
+                    let prev = (currentSlide - 1 + slides.length) % slides.length;
+                    showSlide(prev);
+                    resetTimer();
+                }
+            }
+
+            // Auto-play disabled per user request
+            // startTimer(); 
 
             // Pause on hover
-            const carouselContainer = document.getElementById('carouselSlides');
-            carouselContainer.addEventListener('mouseenter', () => clearInterval(interval));
-            carouselContainer.addEventListener('mouseleave', startTimer);
+            if (carouselContainer) {
+                // carouselContainer.addEventListener('mouseenter', () => clearInterval(interval));
+                // carouselContainer.addEventListener('mouseleave', startTimer);
+            }
         });
     </script>
 </body>
